--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
 
-# Created by https://www.gitignore.io/api/macos,maven,windows,netbeans
+# Created by https://www.gitignore.io/api/java,macos,maven,windows,netbeans
+
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
 ### macOS ###
 *.DS_Store
@@ -73,4 +97,4 @@ $RECYCLE.BIN/
 *.lnk
 
 
-# End of https://www.gitignore.io/api/macos,maven,windows,netbeans
+# End of https://www.gitignore.io/api/java,macos,maven,windows,netbeans
